[package]
name = "sandbox"
version = "0.1.0"
authors = ["t-taon"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyof_struct = { path = "../anyof_struct" }
hyper = "0.13"
hyper-tls = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
