[package]
name = "sandbox"
version = "0.1.0"
authors = ["t-taon"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# base64 = "0.12"
map_item = { path = "../map_item" }
fs2 = "0.4"
# hyper = "0.13"
# hyper-tls = "0.4"
# libsodium-sys = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
winapi = { version = "0.3", features = ["handleapi", "winsock2"]}
# zeroize = "^1.1"
